@@ -4,6 +4,9 @@
 Git 1.2.x
 ------------------------------------------------------------------------------------------------------------------------
 
+BACKEND
+	Fixed: Could not remove service (wrong return value)
+
 CONFIG
 	Removed ProxyErrorOverride parameter which was introduced in version 1.2.10 (Unexpected 503 errors +++)
 
